kubernetes/winezone-products.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winezone-products
  labels:
    app: winezone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: winezone
  template:
    metadata:
      labels:
        app: winezone
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: winezone-products
          image: bgpcloudsbx.azurecr.io/winezone-products:0.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
---
apiVersion: v1
kind: Service
metadata:
  name: winezone-products-svc
  labels:
    app: winezone
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: winezone
---
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/app-root: /
      kubernetes.io/ingress.allow-http: "false"
      kubernetes.io/ingress.class: nginx
      kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/use-regex: "true"
    generation: 1
    labels:
      app.kubernetes.io/instance: winezone-auth
      app.kubernetes.io/name: winezone
    name: winezone-products
    namespace: winezone
  spec:
    rules:
    - host: products.winezone.dinamoretail.com
      http:
        paths:
        - backend:
            service:
              name: winezone-products-svc
              port:
                number: 3000
          path: /(.*)
          pathType: ImplementationSpecific
kind: List
metadata:
  resourceVersion: ""
